// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input demo -- input 1`] = `
.c11 {
  vertical-align: baseline;
}

.c25 {
  position: absolute;
  right: 0;
  top: 0;
  text-align: center;
  color: inherit;
}

.c26 .c24 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c23 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
}

.c23 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c23 input {
  border: 1px solid #c3cad9;
  background: #fff;
  height: 28px;
  padding-right: 28px;
}

.c23 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c23 input::-moz-placeholder {
  color: #abb4c3;
}

.c23 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c23 input::placeholder {
  color: #abb4c3;
}

.c23 input:hover {
  border-color: #4683e6;
}

.c23 input:focus {
  border-color: #4683e6;
}

.c23 .c24 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c27 .c24 {
  width: 22px;
  height: 22px;
  line-height: 22px;
}

.c28 .c24 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c29 .c24 {
  width: 34px;
  height: 34px;
  line-height: 34px;
}

.c10 {
  margin-right: 8px;
  font-size: 14px;
}

.c8 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c12 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c12 .c9 {
  color: #4074e1;
}

.c6 {
  position: relative;
  margin-bottom: -8px;
}

.c6 .c7,
.c6 .style__RadioTagWrap-sc-25j3mq-3,
.c6 .style__RadioCardWrap-sc-25j3mq-8 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c6 .c7:last-child,
.c6 .style__RadioTagWrap-sc-25j3mq-3:last-child,
.c6 .style__RadioCardWrap-sc-25j3mq-8:last-child {
  margin-right: 0;
}

.c6 .c31+.c31 {
  margin-left: -1px;
}

.c6 .c30 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c6 .c30:first-child {
  border-radius: 2px 0 0 2px;
}

.c6 .c30:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c15 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c17 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c20 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c22 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c13 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c13:hover {
  border-color: #4683e6;
}

.c13 .c19 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c13 .c21 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c13 .c14 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c13 .c16,
.c13 .c18 {
  line-height: 16px;
}

.c13 .c16 {
  padding-right: 20px;
}

.c13 .c18 {
  padding-left: 20px;
}

.c13 .c16 {
  display: none;
}

<div>
  <form
    class="demo-form uc-fe-form "
  >
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle c11"
              type="circle"
            />
            sm
          </div>
          <div
            checked=""
            class="c7 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c12"
          >
            <i
              class="c9 c10 uc-fe-icon icon__cbox-ed c11"
              type="cbox-ed"
            />
            md
          </div>
          <div
            class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle c11"
              type="circle"
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        icon
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            checked=""
            class="c7 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c12"
          >
            <i
              class="c9 c10 uc-fe-icon icon__cbox-ed c11"
              type="cbox-ed"
            />
            circle-fill
          </div>
          <div
            class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle c11"
              type="circle"
            />
            circle
          </div>
          <div
            class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle c11"
              type="circle"
            />
            loading
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="c13"
        >
          <div
            class="c14 c15"
          >
            <span
              class="c16 c17"
            >
              ON
            </span>
            <span
              class="c18 c17"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c23"
    >
      <input />
      <span
        class="c24 c25"
      >
        <i
          class="uc-fe-icon icon__circle-fill c11"
          type="circle-fill"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- input-disabled 1`] = `
.c3 {
  vertical-align: baseline;
}

.c2 {
  position: absolute;
  right: 0;
  top: 0;
  text-align: center;
  color: inherit;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #6b798e;
  color: #bbb;
}

.c0 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c0 input {
  border: 1px solid #c3cad9;
  background: #fff;
  height: 28px;
  padding-right: 28px;
}

.c0 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c0 input::-moz-placeholder {
  color: #abb4c3;
}

.c0 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c0 input::placeholder {
  color: #abb4c3;
}

.c0 input:hover {
  border-color: #4683e6;
}

.c0 input:focus {
  border-color: #4683e6;
}

.c0 input,
.c0 input:hover,
.c0 input:focus {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c0 .c1 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c4 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
}

.c4 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c4 input {
  border: 1px solid #c3cad9;
  background: #fff;
  height: 28px;
  padding-right: 28px;
}

.c4 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c4 input::-moz-placeholder {
  color: #abb4c3;
}

.c4 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c4 input::placeholder {
  color: #abb4c3;
}

.c4 input:hover {
  border-color: #4683e6;
}

.c4 input:focus {
  border-color: #4683e6;
}

.c4 .c1 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
      disabled=""
    >
      <input
        disabled=""
      />
      <span
        class="c1 c2"
      >
        <i
          class="uc-fe-icon icon__circle c3"
          type="circle"
        />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c4"
    >
      <input />
      <span
        class="c1 c2"
      >
        <i
          class="uc-fe-icon icon__circle c3"
          type="circle"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- input-icon 1`] = `
.c3 {
  vertical-align: baseline;
}

.c2 {
  position: absolute;
  right: 0;
  top: 0;
  text-align: center;
  color: inherit;
}

.c4 .c1 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
}

.c0 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c0 input {
  border: 1px solid #c3cad9;
  background: #fff;
  height: 28px;
  padding-right: 28px;
}

.c0 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c0 input::-moz-placeholder {
  color: #abb4c3;
}

.c0 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c0 input::placeholder {
  color: #abb4c3;
}

.c0 input:hover {
  border-color: #4683e6;
}

.c0 input:focus {
  border-color: #4683e6;
}

.c0 .c1 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <input />
      <span
        class="c1 c2"
      >
        <i
          class="uc-fe-icon icon__circle-fill c3"
          type="circle-fill"
        />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <input />
      <span
        class="c1 c2"
      >
        <i
          class="uc-fe-icon icon__circle c3"
          type="circle"
        />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <input />
      <span
        class="c1 c2"
      >
        <i
          class="uc-fe-icon icon__loading c3"
          type="loading"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- input-size 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
}

.c0 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c0 input {
  border: 1px solid #c3cad9;
  background: #fff;
  height: 22px;
}

.c0 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c0 input::-moz-placeholder {
  color: #abb4c3;
}

.c0 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c0 input::placeholder {
  color: #abb4c3;
}

.c0 input:hover {
  border-color: #4683e6;
}

.c0 input:focus {
  border-color: #4683e6;
}

.c0 .c3 {
  width: 22px;
  height: 22px;
  line-height: 22px;
}

.c1 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
}

.c1 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c1 input {
  border: 1px solid #c3cad9;
  background: #fff;
  height: 28px;
}

.c1 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c1 input::-moz-placeholder {
  color: #abb4c3;
}

.c1 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c1 input::placeholder {
  color: #abb4c3;
}

.c1 input:hover {
  border-color: #4683e6;
}

.c1 input:focus {
  border-color: #4683e6;
}

.c1 .c3 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c2 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
}

.c2 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c2 input {
  border: 1px solid #c3cad9;
  background: #fff;
  height: 34px;
}

.c2 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c2 input::-moz-placeholder {
  color: #abb4c3;
}

.c2 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c2 input::placeholder {
  color: #abb4c3;
}

.c2 input:hover {
  border-color: #4683e6;
}

.c2 input:focus {
  border-color: #4683e6;
}

.c2 .c3 {
  width: 34px;
  height: 34px;
  line-height: 34px;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <input />
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c1"
    >
      <input />
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c2"
    >
      <input />
    </span>
  </div>
</div>
`;

exports[`Input demo -- search 1`] = `
.c11 {
  vertical-align: baseline;
}

.c25 {
  position: absolute;
  right: 0;
  top: 0;
  text-align: center;
  color: inherit;
}

.c26 {
  cursor: pointer;
}

.c27 .c24 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c23 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
}

.c23 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c23 input {
  border: 1px solid #c3cad9;
  background: #fff;
  height: 28px;
  padding-right: 28px;
}

.c23 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c23 input::-moz-placeholder {
  color: #abb4c3;
}

.c23 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c23 input::placeholder {
  color: #abb4c3;
}

.c23 input:hover {
  border-color: #4683e6;
}

.c23 input:focus {
  border-color: #4683e6;
}

.c23 .c24 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c28 .c24 {
  width: 22px;
  height: 22px;
  line-height: 22px;
}

.c29 .c24 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c30 .c24 {
  width: 34px;
  height: 34px;
  line-height: 34px;
}

.c31 .c24 {
  width: 22px;
  height: 22px;
  line-height: 22px;
}

.c32 .c24 {
  width: 34px;
  height: 34px;
  line-height: 34px;
}

.c10 {
  margin-right: 8px;
  font-size: 14px;
}

.c8 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c12 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c12 .c9 {
  color: #4074e1;
}

.c6 {
  position: relative;
  margin-bottom: -8px;
}

.c6 .c7,
.c6 .style__RadioTagWrap-sc-25j3mq-3,
.c6 .style__RadioCardWrap-sc-25j3mq-8 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c6 .c7:last-child,
.c6 .style__RadioTagWrap-sc-25j3mq-3:last-child,
.c6 .style__RadioCardWrap-sc-25j3mq-8:last-child {
  margin-right: 0;
}

.c6 .c34+.c34 {
  margin-left: -1px;
}

.c6 .c33 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c6 .c33:first-child {
  border-radius: 2px 0 0 2px;
}

.c6 .c33:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c15 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c17 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c20 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c22 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c13 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c13:hover {
  border-color: #4683e6;
}

.c13 .c19 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c13 .c21 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c13 .c14 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c13 .c16,
.c13 .c18 {
  line-height: 16px;
}

.c13 .c16 {
  padding-right: 20px;
}

.c13 .c18 {
  padding-left: 20px;
}

.c13 .c16 {
  display: none;
}

<div>
  <form
    class="demo-form uc-fe-form "
  >
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle c11"
              type="circle"
            />
            sm
          </div>
          <div
            checked=""
            class="c7 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c12"
          >
            <i
              class="c9 c10 uc-fe-icon icon__cbox-ed c11"
              type="cbox-ed"
            />
            md
          </div>
          <div
            class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle c11"
              type="circle"
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="c13"
        >
          <div
            class="c14 c15"
          >
            <span
              class="c16 c17"
            >
              ON
            </span>
            <span
              class="c18 c17"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c23"
    >
      <input />
      <span
        class="c24 c25"
      >
        <i
          class="c26 uc-fe-icon icon__search c11"
          type="search"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- search-disabled 1`] = `
.c4 {
  vertical-align: baseline;
}

.c2 {
  position: absolute;
  right: 0;
  top: 0;
  text-align: center;
  color: inherit;
}

.c3 {
  cursor: pointer;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #6b798e;
  color: #bbb;
}

.c0 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c0 input {
  border: 1px solid #c3cad9;
  background: #fff;
  height: 28px;
  padding-right: 28px;
}

.c0 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c0 input::-moz-placeholder {
  color: #abb4c3;
}

.c0 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c0 input::placeholder {
  color: #abb4c3;
}

.c0 input:hover {
  border-color: #4683e6;
}

.c0 input:focus {
  border-color: #4683e6;
}

.c0 input,
.c0 input:hover,
.c0 input:focus {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c0 .c1 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c5 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
}

.c5 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c5 input {
  border: 1px solid #c3cad9;
  background: #fff;
  height: 28px;
  padding-right: 28px;
}

.c5 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c5 input::-moz-placeholder {
  color: #abb4c3;
}

.c5 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c5 input::placeholder {
  color: #abb4c3;
}

.c5 input:hover {
  border-color: #4683e6;
}

.c5 input:focus {
  border-color: #4683e6;
}

.c5 .c1 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c6 .c1 {
  width: 22px;
  height: 22px;
  line-height: 22px;
}

.c7 .c1 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c8 .c1 {
  width: 34px;
  height: 34px;
  line-height: 34px;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
      disabled=""
    >
      <input
        disabled=""
      />
      <span
        class="c1 c2"
      >
        <i
          class="c3 uc-fe-icon icon__search c4"
          type="search"
        />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c5"
    >
      <input />
      <span
        class="c1 c2"
      >
        <i
          class="c3 uc-fe-icon icon__search c4"
          type="search"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- search-size 1`] = `
.c4 {
  vertical-align: baseline;
}

.c2 {
  position: absolute;
  right: 0;
  top: 0;
  text-align: center;
  color: inherit;
}

.c3 {
  cursor: pointer;
}

.c7 .c1 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c5 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
}

.c5 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c5 input {
  border: 1px solid #c3cad9;
  background: #fff;
  height: 28px;
  padding-right: 28px;
}

.c5 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c5 input::-moz-placeholder {
  color: #abb4c3;
}

.c5 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c5 input::placeholder {
  color: #abb4c3;
}

.c5 input:hover {
  border-color: #4683e6;
}

.c5 input:focus {
  border-color: #4683e6;
}

.c5 .c1 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c8 .c1 {
  width: 22px;
  height: 22px;
  line-height: 22px;
}

.c9 .c1 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c10 .c1 {
  width: 34px;
  height: 34px;
  line-height: 34px;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
}

.c0 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c0 input {
  border: 1px solid #c3cad9;
  background: #fff;
  height: 22px;
  padding-right: 22px;
}

.c0 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c0 input::-moz-placeholder {
  color: #abb4c3;
}

.c0 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c0 input::placeholder {
  color: #abb4c3;
}

.c0 input:hover {
  border-color: #4683e6;
}

.c0 input:focus {
  border-color: #4683e6;
}

.c0 .c1 {
  width: 22px;
  height: 22px;
  line-height: 22px;
}

.c6 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
}

.c6 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c6 input {
  border: 1px solid #c3cad9;
  background: #fff;
  height: 34px;
  padding-right: 34px;
}

.c6 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c6 input::-moz-placeholder {
  color: #abb4c3;
}

.c6 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c6 input::placeholder {
  color: #abb4c3;
}

.c6 input:hover {
  border-color: #4683e6;
}

.c6 input:focus {
  border-color: #4683e6;
}

.c6 .c1 {
  width: 34px;
  height: 34px;
  line-height: 34px;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <input />
      <span
        class="c1 c2"
      >
        <i
          class="c3 uc-fe-icon icon__search c4"
          type="search"
        />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c5"
    >
      <input />
      <span
        class="c1 c2"
      >
        <i
          class="c3 uc-fe-icon icon__search c4"
          type="search"
        />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c6"
    >
      <input />
      <span
        class="c1 c2"
      >
        <i
          class="c3 uc-fe-icon icon__search c4"
          type="search"
        />
      </span>
    </span>
  </div>
</div>
`;
